# visual_novel_creator

./: CMakeLists.txt  README.md  main.cpp  reference.txt  vn_creator
assets/backgrounds/: user_background.cpp
assets/scenes/: scenes.cpp  scenes.h
assets/sprites/: user_sprites.cpp
raylib-imgui/: imgui_impl_raylib.h  rlImGui.h
raylib-imgui/extras/: FA6FreeSolidFontData.h  IconsFontAwesome6.h
screens/: editor_screen.cpp  welcome_screen.cpp
screens/ui/: asset_panel.cpp  buttons.cpp  preview_panel.cpp  scene_panel.cpp  visual_novel_create.cpp
